refact: adicionando paginação na listagem de pacientes e endpoint para update de protuario